package org.oppia.app.profile

import android.app.Activity.RESULT_OK
import android.app.Application
import android.app.Instrumentation.ActivityResult
import android.content.ContentResolver
import android.content.Context
import android.content.Intent
import android.content.res.Resources
import android.net.Uri
import android.provider.MediaStore
import androidx.test.core.app.ActivityScenario.launch
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.closeSoftKeyboard
import androidx.test.espresso.action.ViewActions.scrollTo
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.Intents.intended
import androidx.test.espresso.intent.Intents.intending
import androidx.test.espresso.intent.matcher.IntentMatchers.hasAction
import androidx.test.espresso.intent.matcher.IntentMatchers.hasComponent
import androidx.test.espresso.intent.matcher.IntentMatchers.hasData
import androidx.test.espresso.matcher.ViewMatchers.isChecked
import androidx.test.espresso.matcher.ViewMatchers.isClickable
import androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isRoot
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.google.firebase.FirebaseApp
import dagger.BindsInstance
import dagger.Component
import dagger.Module
import dagger.Provides
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.Matchers.not
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.oppia.app.R
import org.oppia.app.utility.OrientationChangeAction.Companion.orientationLandscape
import org.oppia.domain.oppialogger.LogStorageModule
import org.oppia.testing.TestDispatcherModule
import org.oppia.testing.TestLogReportingModule
import org.oppia.testing.profile.ProfileTestHelper
import org.oppia.util.logging.EnableConsoleLog
import org.oppia.util.logging.EnableFileLog
import org.oppia.util.logging.GlobalLogLevel
import org.oppia.util.logging.LogLevel
import org.robolectric.annotation.LooperMode
import javax.inject.Inject
import javax.inject.Singleton

@RunWith(AndroidJUnit4::class)
@LooperMode(LooperMode.Mode.PAUSED)
class AddProfileChooserActivityTest {

  @Inject
  lateinit var context: Context

  @Inject
  lateinit var profileTestHelper: ProfileTestHelper

  @Before
  fun setUp() {
    Intents.init()
    setUpTestApplicationComponent()
    FirebaseApp.initializeApp(context)
  }

  @After
  fun tearDown() {
    Intents.release()
  }

  private fun setUpTestApplicationComponent() {
    DaggerAddProfileChooserActivityTest_TestApplicationComponent.builder()
      .setApplication(ApplicationProvider.getApplicationContext())
      .build()
      .inject(this)
  }

  @Test
  fun testAddProfileChooserActivity_inputName_clickCreate_checkOpensProfileChooserActivity() {
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("test"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      intended(hasComponent(ProfileChooserActivity::class.java.name))
    }
  }

  @Test
  fun testAddProfileChooserActivity_changeConfiguration_inputName_clickCreate_checkOpensProfileChooserActivity() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(allOf(withId(R.id.add_profile_activity_pin_check_box))).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(scrollTo()).perform(
        typeText("test"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      intended(hasComponent(ProfileChooserActivity::class.java.name))
    }
  }

  @Test
  fun testAddProfileChooserActivity_clickOnCheckbox_createPin_checkIsDisplayed() {
    launch(AddProfileActivity::class.java).use {
      onView(allOf(withId(R.id.add_profile_activity_pin_check_box))).perform(click())
      onView(withId(R.id.add_profile_activity_pin_profile_input_view)).check(
        matches(
          isDisplayed()
        )
      )
    }
  }

  @Test
  fun testAddProfileChooserActivity_changeConfiguration_clickOnCheckbox_createPin_checkIsDisplayed() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(allOf(withId(R.id.add_profile_activity_pin_check_box))).perform(scrollTo())
        .perform(click())
      onView(withId(R.id.add_profile_activity_pin_profile_input_view)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_pin_profile_input_view)).check(
        matches(
          isDisplayed()
        )
      )
    }
  }

  @Test
  fun testProfileChooserActivity_createPin_checkNotVisible() {
    launch(AddProfileActivity::class.java).use {
      onView(withId(R.id.add_profile_activity_pin_profile_input_view)).check(
        matches(
          not(
            isDisplayed()
          )
        )
      )
    }
  }

  @Test
  fun testProfileChooserActivity_changeConfiguration_createPin_checkNotVisible() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.add_profile_activity_pin_profile_input_view)).check(
        matches(
          not(
            isDisplayed()
          )
        )
      )
    }
  }

  @Test
  fun testProfileChooserActivity_inputName_inputPin_clickCreate_checkOpensProfileActivity() {
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("test"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(
        typeText("123"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_confirm_pin_profile_input_view))
        )
      ).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_confirm_pin_profile_input_view))
        )
      ).perform(
        typeText("123"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      intended(hasComponent(ProfileChooserActivity::class.java.name))
    }
  }

  /* ktlint-disable max-line-length */
  @Test
  fun testProfileChooserActivity_changeConfiguration_inputName_inputPin_clickCreate_checkOpensProfileActivity() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(allOf(withId(R.id.add_profile_activity_pin_check_box))).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("test"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(scrollTo()).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(
        typeText("123"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_confirm_pin_profile_input_view))
        )
      ).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_confirm_pin_profile_input_view))
        )
      ).perform(
        typeText("123"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      intended(hasComponent(ProfileChooserActivity::class.java.name))
    }
  }
  /* ktlint-enable max-line-length */

  @Test
  fun testProfileChooserActivity_checkCreateIsNotClickable() {
    launch(AddProfileActivity::class.java).use {
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).check(matches(not(isClickable())))
    }
  }

  @Test
  fun testProfileChooserActivity_changeConfiguration_checkCreateIsNotClickable() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).check(matches(not(isClickable())))
    }
  }

  @Test
  fun testProfileChooserActivity_inputName_checkCreateIsClickable() {
    profileTestHelper.initializeProfiles()
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("Rajat"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).check(matches(isClickable()))
    }
  }

  @Test
  fun testProfileChooserActivity_inputName_changeConfiguration_checkCreateIsClickable() {
    profileTestHelper.initializeProfiles()
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("Rajat"), closeSoftKeyboard()
      )
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
        .check(matches(isClickable()))
    }
  }

  @Test
  fun testProfileChooserActivity_inputNotUniqueName_clickCreate_checkNameNotUniqueError() {
    profileTestHelper.initializeProfiles()
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("Sean"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText(context.getString(R.string.add_profile_error_name_not_unique))))
    }
  }

  /* ktlint-disable max-line-length */
  @Test
  fun testProfileChooserActivity_changeConfiguration_inputNotUniqueName_clickCreate_checkNameNotUniqueError() {
    profileTestHelper.initializeProfiles()
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(scrollTo()).perform(
        typeText("Sean"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText(context.getString(R.string.add_profile_error_name_not_unique))))
    }
  }
  /* ktlint-enable max-line-length */

  @Test
  fun testProfileChooserActivity_inputNotUniqueName_clickCreate_inputName_checkErrorIsCleared() {
    profileTestHelper.initializeProfiles()
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("Sean"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText(" "), closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText("")))
    }
  }

  /* ktlint-disable max-line-length */
  @Test
  fun testProfileChooserActivity_changeConfiguration_inputNotUniqueName_clickCreate_inputName_checkErrorIsCleared() {
    profileTestHelper.initializeProfiles()
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(scrollTo()).perform(
        typeText("Sean"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText(" "), closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText("")))
    }
  }
  /* ktlint-enable max-line-length */

  @Test
  fun testProfileChooserActivity_inputNameWithNumbers_clickCreate_checkNameOnlyLettersError() {
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("123"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText(context.getString(R.string.add_profile_error_name_only_letters))))
    }
  }

  /* ktlint-disable max-line-length */
  @Test
  fun testProfileChooserActivity_changeConfiguration_inputNameWithNumbers_clickCreate_checkNameOnlyLettersError() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("123"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText(context.getString(R.string.add_profile_error_name_only_letters))))
    }
  }
  /* ktlint-enable max-line-length */

  @Test
  fun testProfileChooserActivity_inputNameWithNumbers_clickCreate_inputName_checkErrorIsCleared() {
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("123"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText(" "), closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText("")))
    }
  }

  /* ktlint-disable max-line-length */
  @Test
  fun testProfileChooserActivity_changeConfiguration_inputNameWithNumbers_clickCreate_inputName_checkErrorIsCleared() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(scrollTo()).perform(
        typeText("123"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText(" "), closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).check(matches(withText("")))
    }
  }
  /* ktlint-enable max-line-length */

  @Test
  fun testProfileChooserActivity_inputShortPin_clickCreate_checkPinLengthError() {
    launch(AddProfileActivity::class.java).use {
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(
        typeText("test"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(
        typeText("12"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).check(matches(withText(context.getString(R.string.add_profile_error_pin_length))))
    }
  }

  @Test
  fun testProfileChooserActivity_changeConfiguration_inputShortPin_clickCreate_checkPinLengthError() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_user_name_profile_input_view))
        )
      ).perform(scrollTo()).perform(
        typeText("test"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(scrollTo())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(
        typeText("12"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).check(matches(withText(context.getString(R.string.add_profile_error_pin_length))))
    }
  }

  @Test
  fun testProfileChooserActivity_inputShortPin_clickCreate_inputPin_checkErrorIsCleared() {
    launch(AddProfileActivity::class.java).use {
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(
        typeText("12"), closeSoftKeyboard()
      )
      onView(withId(R.id.add_profile_activity_create_button)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_create_button)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).perform(scrollTo()).perform(
        typeText("3"), closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.error_text),
          isDescendantOfA(withId(R.id.add_profile_activity_pin_profile_input_view))
        )
      ).check(
        matches(
          withText("")
        )
      )
    }
  }

  /* ktlint-disable max-line-length */
  @Test
  fun testProfileChooserActivity_changeConfiguration_inputShortPin_clickCreate_inputPin_checkErrorIsCleared() {
    launch(AddProfileActivity::class.java).use {
      onView(isRoot()).perform(orientationLandscape())
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(scrollTo())
      onView(withId(R.id.add_profile_activity_pin_check_box)).perform(click())
      onView(
        allOf(
          withId(R.id.input),
